<resources>
    <string name="app_name">PetHouse.Mobile</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="add_pet">Add Pet</string>
    <string name="your_pets">Your pets</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_pethouse_system">Welcome to PetHouse system</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_breed">Pet breed</string>
    <string name="weight">Weight</string>
    <string name="calories_per_day">Calories per day</string>
    <string name="activity_level">Activity level</string>
    <string name="pet_created">Pet Created!</string>
    <string name="pet_creation_failed">Pet creation failed</string>
    <string name="user_not_authenticated">User not authenticated</string>
    <string name="error_fetch">Error to get</string>
    <string name="breed">Breed</string>
    <string name="profile_image">Profile Image</string>
    <string name="role">Role</string>
    <string name="registation_date">Registration Date</string>
    <string name="your_profile">Your profile</string>
    <string name="add_meal">Add Meal</string>
    <string name="meal_status">Meal status</string>
    <string name="calories_consumed">Calories consumed</string>
    <string name="change_pet_information">Change pet information</string>
    <string name="meal_start_time">Meal start time</string>
    <string name="pet_information">Pet information</string>
    <string name="pet_meals">Pet meals</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="portion_size">Portion size</string>
    <string name="calorific_value">Calorific value</string>
    <string name="food_type">Food type</string>
    <string name="adaptive_adjustment">Adaptive adjustment</string>
    <string name="everyday_meal">Everyday meal</string>
    <string name="chose_time">Chose time</string>
    <string name="time_isn_t_chosen">Time isn\'t chosen</string>
    <string name="meal_added">Meal added</string>
    <string name="error">Error</string>
    <string name="pet_update_success">Pet updated successfully</string>
    <string name="meal_update_success">Meal updated successfully</string>
    <string name="save">Save</string>
    <string name="chose_date">Chose date</string>
    <string name="update_pet">Update Pet</string>
    <string name="update_meal">Update meal</string>
    <string name="is_daily">Is daily</string>
    <string name="date_and_time">Date and time</string>
    <string name="edit_meal">Edit meal</string>
    <string name="healthanalyses">HealthAnalyses</string>
    <string name="add_analysis">Add analysis</string>
    <string name="type">Type</string>
    <string name="dates">Dates</string>
    <string name="recommendations">Recommendations</string>
    <string name="end_analysis_date">End analysis date</string>
    <string name="start_analysis_date">Start analysis date</string>
    <string name="create_analysis">Create analysis</string>
    <string name="chose_both_dates">Chose both dates</string>
    <string name="analysis_completed">Analysis created successfully</string>
    <string name="db_admin_panel">DB admin panel</string>
    <string name="system_admin_panel">System admin panel</string>
    <string name="local_admin_panel">Local admin panel</string>
    <string name="go_to_db_admin_panel">Go to DB Admin Panel</string>
    <string name="go_to_system_admin_panel">Go to System Admin Panel</string>
    <string name="go_to_local_admin_panel">Go to Local Admin Panel</string>
    <string name="current_role">Current role</string>
    <string name="db_status">Db status</string>
    <string name="database_backup">Database backup</string>
    <string name="enter_backup_path">Enter backup path</string>
    <string name="create_backup">Create backup</string>
    <string name="database_restore">Database restore</string>
    <string name="restore_database">Restore database</string>
    <string name="old_logs_delete">Old logs deleted</string>
    <string name="config_saved">Configuration saved</string>
    <string name="online">Online</string>
    <string name="uptime">Uptime</string>
    <string name="cpu">CPU</string>
    <string-array name="user_roles">
        <item>Admin</item>
        <item>DbAdmin</item>
        <item>ApplicationAdmin</item>
        <item>User</item>
    </string-array>
    <string-array name="activity_levels">
        <item>Low</item>
        <item>Mоderate</item>
        <item>High</item>
    </string-array>
    <string name="connection">Connection</string>
    <string name="db_size">Db size</string>
    <string name="checked">Checked</string>
    <string name="success">Success</string>
    <string name="backup_created">Backup created</string>
    <string name="restore_created">Restore created</string>
    <string name="delete_old_logs">Delete Old Logs</string>
    <string name="system_logs">System Logs</string>
    <string name="delete_logs_older_than_days">Delete logs older than days</string>
    <string name="save_configuration">Save Configuration</string>
    <string name="encryption_key">Encryption Key</string>
    <string name="refresh_secret_key">Refresh Secret Key</string>
    <string name="access_secret_key">Access Secret Key</string>
    <string name="server_configuration">Server Configuration</string>
    <string name="server_status">Server Status</string>
    <string name="create_pet">Create pet</string>
    <string name="memory">Memory</string>
</resources>