<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etPortionSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/portion_size"
            android:inputType="number" />

        <EditText
            android:id="@+id/etCalorificValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calorific_value"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etFoodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_type" />

        <CheckBox
            android:id="@+id/cbAdaptiveAdjustment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adaptive_adjustment" />

        <CheckBox
            android:id="@+id/cbIsDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyday_meal" />

        <Button
            android:id="@+id/btnPickDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chose_date" />

        <Button
            android:id="@+id/btnPickTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chose_time"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvSelectedDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/time_isn_t_chosen" />

        <Button
            android:id="@+id/btnSubmitMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>
</layout>