<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_pet"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etPetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_name" />

        <EditText
            android:id="@+id/etPetBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_breed" />

        <EditText
            android:id="@+id/etPetWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etCaloriesPerDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calories_per_day"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinnerActivityLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/activity_level" />

        <Button
            android:id="@+id/btnCreateCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_pet" />

    </LinearLayout>
</layout>
