<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_profile"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:padding="8dp" />

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_user_avatar"
            android:contentDescription="@string/profile_image"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvUserName"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvUserEmail"
            android:text="@string/email"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvUserRole"
            android:text="@string/role"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvUserCreated"
            android:text="@string/registation_date"
            android:textSize="14sp"
            android:textColor="#888888"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
</layout>