<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="56dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_pethouse_system" />

        <LinearLayout
            android:id="@+id/adminButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/btnDbAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_db_admin_panel"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnSystemAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_system_admin_panel"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLocalAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_local_admin_panel"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</layout>
